<resources>
    <string name="app_name">Hw9</string>
    <string name="search_title">Stock Market Search</string>
    <string name="search_btn">Get Quote</string>
    <string name="clear_btn">Clear</string>
    <string name="favorite">Favorites</string>
    <string name="autorefresh">AutoRefresh</string>
    <string name="current">CURRENT</string>
    <string name="historical">HISTORICAL</string>
    <string name="news">NEWS</string>
    <string name="stock_details">Stock Details</string>
    <string name="facebook_app_id">1645068555559802</string>


    <string-array name="sort_by">
        <item>Sort by</item>
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
    </string-array>
    <string-array name="order">
        <item>Order</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="indicators">
        <item>Price</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>STOCH</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
        <item>BBANDS</item>
        <item>MACD</item>
    </string-array>
    <string name="title_activity_stock">StockActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placehoder">Placeholder</string>
    <string name="indicators">Indicators</string>
    <string name="change">Change</string>
    <string name="failed_to_load_data">Failed to load data.</string>
    <string name="remove_from_favorites">Remove from Favorites?</string>
    <string name="option_no">No</string>
    <string name="option_yes">Yes</string>
</resources>
